[tool.poetry]
name = "fbmscraper"
version = "0.1.0"
description = ""
authors = ["Julia <juliascott@lclark.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.2"
bs4 = "^0.0.1"
pyqt6 = "^6.4.2"
selenium = "^4.8.3"
pandas = "^2.0.0"
webdriver-manager = "^3.8.5"
fastapi = {extras = ["all"], version = "^0.95.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
